--- a/style.css
+++ b/style.css
@@ -1,17 +1,17 @@
 /*
-Theme Name:         FoundationPress
+Theme Name:         Bestaurant
 Theme URI:          https://github.com/olefredrik/foundationpress.git
-Description:        FoundationPress is a WordPress starter theme based on Foundation 5 by Zurb
+Description:        A Wordpress Theme for Restaurant Websites based on ZURB Foundation 5. Most semantic html5 markup, WAI-ARIA Landmark Roles, microformats, ...
 Version:            1.0.0
-Author:             Ole Fredrik Lie
-Author URI:         http://olefredrik.com/
+Author:             Andreas Licht
+Author URI:         https://plus.google.com/+AndreasLicht/
 
 License:            MIT License
 License URI:        http://www.opensource.org/licenses/mit-license.php
 */
 
-/* ---------------------------------------------------------------------------- 
-  
+/* ----------------------------------------------------------------------------
+
   Unfortunately WordPress will require a style.css file
   located in the theme's root folder for stuff to work.
 
