Fixed Theme URI

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
-Theme Name:         Bestaurant
-Theme URI:          https://github.com/olefredrik/foundationpress.git
+Theme Name:         Semantic Foundation
+Theme URI:          https://github.com/LichtAnd/semantic-foundation
 Description:        A Wordpress Theme for Restaurant Websites based on ZURB Foundation 5. Most semantic html5 markup, WAI-ARIA Landmark Roles, microformats, ...
 Version:            1.0.0
 Author:             Andreas Licht
