--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
 Theme Name:         Semantic Foundation
 Theme URI:          https://github.com/LichtAnd/semantic-foundation
-Description:        A Wordpress Theme for Restaurant Websites based on ZURB Foundation 5. Most semantic html5 markup, WAI-ARIA Landmark Roles, microformats, ...
+Description:        Semantic Wordpress theme based on Foundation 5. (html5, microformats, WAI-ARIA Landmark Roles, ...)
 Version:            1.0.0
 Author:             Andreas Licht
 Author URI:         https://plus.google.com/+AndreasLicht/
