--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 /*
 Theme Name:         Semantic Foundation
 Theme URI:          https://github.com/LichtAnd/semantic-foundation
-Description:        Semantic Wordpress theme based on Foundation 5. (html5, microformats, WAI-ARIA Landmark Roles, ...)
+GitHub Theme URI: 	https://github.com/lichtand/semantic-foundation
+Description:        Semantic Wordpress theme based on Foundation 5. Carfully crafted following the Wordpress coding standards, common best practices and wai-aria recommendations utilizing html5 sectioning elements and microformats to improve accessibility and put the most possible meaning to the code.
 Version:            1.0.0
 Author:             Andreas Licht
 Author URI:         https://plus.google.com/+AndreasLicht/
@@ -15,16 +16,5 @@ License URI:        http://www.opensource.org/licenses/mit-license.php
   Unfortunately WordPress will require a style.css file
   located in the theme's root folder for stuff to work.
 
-  However, we will not be using vanilla CSS. We're using Sass.
-
-  Sass is a superset of CSS that adds in amazing features
-  such as variables, nested selectors and loops. It's also
-  the easiest way to customize Foundation.
-
-  All Sass files are located in the /scss folder.
-
-  Please read the README.md file before getting started. More info on how
-  to use Sass with Foundation can be found here:
-  http://foundation.zurb.com/docs/sass.html
-
+  Goto /scss to see where the real magic happens.
 ---------------------------------------------------------------------------- */
