--- a/scss/site/_structure.scss
+++ b/scss/site/_structure.scss
@@ -60,26 +60,7 @@
 	 * ------------------------------------
 	 */
 
-	 // Hero
-
-	#homepage-hero {
-		background: url("http://foundation.zurb.com/assets/img/marquee-stars.svg") repeat scroll 0 0 #074E68;
-		padding: rem-calc(20) 0;
-		margin: - rem-calc(32) 0 rem-calc(32);
-		position: relative;
-		text-align: left;
-		height: auto;
-
-			h1 a, h4 { color: #fff; }
-
-			.floatingyeti img {
-				max-width: 30%;
-				position: absolute;
-				right: rem-calc(100);
-			}
-
-			.download { margin-top: rem-calc(20); }
-		}
+	// Insert styles here
 
 
 	/**
@@ -94,6 +75,11 @@
 	 * 4.3 Widgets
 	 * ------------------------------------
 	 */
+
+	.widget ul{
+		margin-left: 0;
+		list-style: none;
+	}
 
 	// Insert styles here
 
