--- a/scss/site/_structure.scss
+++ b/scss/site/_structure.scss
@@ -50,6 +50,10 @@
  * ----------------------------------------------------------------------------
  */
 
+body {
+	background: url('../assets/img/pattern-light-wood.png')
+}
+
 /**
 	 * 3.1 Header
 	 * ------------------------------------
@@ -58,6 +62,7 @@
 		@include grid-row();
   	#banner {
     	@include grid-column(12);
+			padding: 0;
   	}
 	}
 /**
@@ -75,8 +80,8 @@
  * ----------------------------------------------------------------------------
  */
 
-	article {
-		padding: $column-gutter;
+	#content-main article {
+		@include panel;
 		background: url('../assets/img/pattern-subtile-white-distorted.png');
 	}
 
